three-tier-application/backend/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
#  replicas: 2
  selector:
    matchLabels: {}
  template:
    metadata:
      labels: {}
    spec:
      containers:
        - name: backend
          image: ghcr.io/sysadmin29/back-end:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: github-container-registry
