three-tier-application/backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  selector:
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: NodePort
